bugFix: fix z-index bug for project items text section

--- a/src/index.css
+++ b/src/index.css
@@ -92,3 +92,26 @@ button:focus-visible {
     @apply font-bold pb-[50%] border-b-2 border-[#0066ff];
   }
 }
+
+/* react-headroom Component */
+.headroom {
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+}
+.headroom--unfixed {
+  position: relative;
+  transform: translateY(0);
+}
+.headroom--scrolled {
+  transition: transform 200ms ease-in-out;
+}
+.headroom--unpinned {
+  position: fixed;
+  transform: translateY(-100%);
+}
+.headroom--pinned {
+  position: fixed;
+  transform: translateY(0%);
+}
